# shamela2epub

./: .gitignore  .pre-commit-config.yaml  Makefile  README.ar.md  README.md  mise.toml  pyproject.toml  renovate.json5  requirements-cli.txt  requirements-gui.txt  requirements.txt  shamela2epub.spec  shamela2epubgui.spec
.github/workflows/: ci.yml
pyinstaller/: requirements-cli.txt  requirements-gui.txt  requirements.txt
shamela2epub/: __init__.py  __main__.py  main.py  patterns.py  utils.py
shamela2epub/assets/: books-duotone.icns  styles.css
shamela2epub/cli/: app.py
shamela2epub/gui/: app.py  ui.ui
shamela2epub/misc/: constants.py  http.py  patterns.py  utils.py
shamela2epub/models/: book_base_html_page.py  book_html_page.py  book_info_html_page.py  epub_book.py
