[tool.poetry]
name = "shamela2epub"
version = "1.3.0"
description = "A CLI and GUI tool to download a book on https://shamela.ws to an EPUB book."
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/yshalsager/shamela2epub/"
keywords = ["epub3", "shamela", "book", "epub", "islamic"]
packages = [
    { include = "shamela2epub" }
]
include = [
    "README.md",
    "pyproject.toml"
]
readme = "README.md"

[tool.poetry.group.main.dependencies]
python = ">=3.11,<3.12"
httpx = ">=0.23,<0.25"
EbookLib = ">=0.17.1,<0.19.0"
lxml = "^4.9.2"
click = "^8.1.3"
parsel = "^1.8.1"
tomli = "^2.0.1"
trogon = "^0.4.0"
gevent = "^22.10.2"
tqdm = "^4.65.0"

[tool.poetry.group.gui.dependencies]
PyQt5 = {version = "^5.15.7"}
pyqtdarktheme = ">=1.1,<3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"
ruff = "^0.0.272"
mypy = "^1.3"
types-toml = "^0.10.8"
types-click = "^7.1.8"
pyinstaller = "^5.11"

[tool.poetry.scripts]
shamela2epub = "shamela2epub.__main__:main"
shamela2epubgui = "shamela2epub.gui.app:gui"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '(shamela2epub\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
files = ["shamela2epub"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.pycln]
all = true

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
ignore-init-module-imports = true
line-length = 100
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "PGH001", "RET504", "S101", "D211", "D213", "ERA001", "G004"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["shamela2epub"]
target-version = "py311"
