[project]
name = "shamela2epub"
version = "1.4.3"
description = "A CLI and GUI tool to download a book on https://shamela.ws to an EPUB book."
authors = [{ name = "yshalsager", email = "ysh-alsager@hotmail.com" }]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.13,<3.14"
keywords = [
    "epub3",
    "shamela",
    "book",
    "epub",
    "islamic",
]
dependencies = [
    "niquests>=3.5.3,<4",
    "EbookLib>=0.17.1,<0.19.0",
    "lxml>=5.1.0,<6",
    "click>=8.1.7,<9",
    "parsel>=1.9.0,<2",
    "tomli>=2.0.1,<3",
    "trogon>=0.6.0,<0.7",
    "tqdm>=4.65.0,<5",
]

[project.urls]
Repository = "https://github.com/yshalsager/shamela2epub/"

[project.scripts]
shamela2epub = "shamela2epub.__main__:main"
shamela2epubgui = "shamela2epub.gui.app:gui"

[dependency-groups]
gui = [
    "pyqt6>=6.6.1,<7",
    "pyqtdarktheme-fork>=2.3,<3.0",
]
dev = [
    "pre-commit>=4.0.0,<5",
    "ruff>=0.9.0,<0.10",
    "mypy>=1.9.0,<2",
    "types-toml>=0.10.8,<0.11",
    "types-click>=7.1.8,<8",
    "pyinstaller>=6.5.0,<7",
]

[tool.hatch.build.targets.sdist]
include = [
    "shamela2epub",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
include = [
    "shamela2epub",
    "README.md",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["shamela2epub"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["shamela2epub"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "ISC001"]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
